outputs_20260410-021410-25c684fa/codegen/production/build_logs/compiler_stderr.log
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/Ifx_Types.h:4,
                 from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\src\gtm_tom_3_phase_inverter_pwm.c:19:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:8:18: error: unknown type name 'uint32'
    8 | typedef struct { uint32 _reserved; } IfxGtm; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:9:18: error: unknown type name 'uint32'
    9 | typedef struct { uint32 _reserved; } IfxGtm_Cmu; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:10:18: error: unknown type name 'uint32'
   10 | typedef struct { uint32 _reserved; } IfxPort; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\src\gtm_tom_3_phase_inverter_pwm.c:20:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/IfxGtm_Pwm.h:15:16: error: conflicting types for 'IfxGtm_Pwm_callBack'; have 'void (*)(void *)'
   15 | typedef void (*IfxGtm_Pwm_callBack)(void *);
      |                ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/IfxGtm_Pwm.h:10:38: note: previous declaration of 'IfxGtm_Pwm_callBack' with type 'IfxGtm_Pwm_callBack'
   10 | typedef struct { uint32 _reserved; } IfxGtm_Pwm_callBack; /* auto-stub: type not in mock include chain */
      |                                      ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\src\gtm_tom_3_phase_inverter_pwm.c: In function 'initGtmTom3phInv':
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\src\gtm_tom_3_phase_inverter_pwm.c:138:33: error: assignment to 'int' from 'void (*)(void *)' makes integer from pointer without a cast [-Wint-conversion]
  138 |     interruptConfig.periodEvent = IfxGtm_periodEventFunction;
      |                                 ^
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\src\gtm_tom_3_phase_inverter_pwm.c:139:33: error: assignment to 'int' from 'void *' makes integer from pointer without a cast [-Wint-conversion]
  139 |     interruptConfig.dutyEvent   = NULL_PTR;
      |                                 ^

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:5:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:8:18: error: unknown type name 'uint32'
    8 | typedef struct { uint32 _reserved; } IfxGtm; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:9:18: error: unknown type name 'uint32'
    9 | typedef struct { uint32 _reserved; } IfxGtm_Cmu; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:10:18: error: unknown type name 'uint32'
   10 | typedef struct { uint32 _reserved; } IfxPort; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\mocks\mock_gtm_tom_3_phase_inverter_pwm.c:9:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/IfxGtm_Pwm.h:15:16: error: conflicting types for 'IfxGtm_Pwm_callBack'; have 'void (*)(void *)'
   15 | typedef void (*IfxGtm_Pwm_callBack)(void *);
      |                ^~~~~~~~~~~~~~~~~~~
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/IfxGtm_Pwm.h:10:38: note: previous declaration of 'IfxGtm_Pwm_callBack' with type 'IfxGtm_Pwm_callBack'
   10 | typedef struct { uint32 _reserved; } IfxGtm_Pwm_callBack; /* auto-stub: type not in mock include chain */
      |                                      ^~~~~~~~~~~~~~~~~~~

In file included from C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\test\test_gtm_tom_3_phase_inverter_pwm.c:2:
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:8:18: error: unknown type name 'uint32'; did you mean 'uint32_t'?
    8 | typedef struct { uint32 _reserved; } IfxGtm; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
      |                  uint32_t
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:9:18: error: unknown type name 'uint32'; did you mean 'uint32_t'?
    9 | typedef struct { uint32 _reserved; } IfxGtm_Cmu; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
      |                  uint32_t
C:\Users\extsiyv\AppData\Local\Temp\tdd_build_9vkg5kv6\include/mock_gtm_tom_3_phase_inverter_pwm.h:10:18: error: unknown type name 'uint32'; did you mean 'uint32_t'?
   10 | typedef struct { uint32 _reserved; } IfxPort; /* auto-stub: type not in mock include chain */
      |                  ^~~~~~
      |                  uint32_t
